; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_arc_untransform.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_arc_untransform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ARC_FILL_IN_PLACE = common dso_local global i32 0, align 4
@ECKSUM = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@FM_EREPORT_ZFS_AUTHENTICATION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @arc_untransform(i32* %0, i32* %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  store i32 0, i32* %10, align 4
  %11 = load i64, i64* %8, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %4
  %14 = load i32, i32* @ARC_FILL_IN_PLACE, align 4
  %15 = load i32, i32* %10, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %10, align 4
  br label %17

17:                                               ; preds = %13, %4
  %18 = load i32*, i32** %5, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @arc_buf_fill(i32* %18, i32* %19, i32* %20, i32 %21)
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %9, align 4
  %24 = load i32, i32* @ECKSUM, align 4
  %25 = icmp eq i32 %23, %24
  br i1 %25, label %26, label %36

26:                                               ; preds = %17
  %27 = load i32, i32* @EIO, align 4
  %28 = call i32 @SET_ERROR(i32 %27)
  store i32 %28, i32* %9, align 4
  %29 = load i32*, i32** %6, align 8
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @spa_log_error(i32* %29, i32* %30)
  %32 = load i32, i32* @FM_EREPORT_ZFS_AUTHENTICATION, align 4
  %33 = load i32*, i32** %6, align 8
  %34 = load i32*, i32** %7, align 8
  %35 = call i32 @zfs_ereport_post(i32 %32, i32* %33, i32* null, i32* %34, i32* null, i32 0, i32 0)
  br label %36

36:                                               ; preds = %26, %17
  %37 = load i32, i32* %9, align 4
  ret i32 %37
}

declare dso_local i32 @arc_buf_fill(i32*, i32*, i32*, i32) #1

declare dso_local i32 @SET_ERROR(i32) #1

declare dso_local i32 @spa_log_error(i32*, i32*) #1

declare dso_local i32 @zfs_ereport_post(i32, i32*, i32*, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
